# sglang-lite

./: .gitignore  AGENTS.md  Cargo.toml  README.md  demo.py  pyproject.toml
control/: Cargo.toml
control/src/: engine_client.rs  http_engine.rs  lib.rs  openai.rs  protocol.rs  stub_engine.rs
control/tests/: protocol_tests.rs
docs/: architecture.md  optimization-priorities.md  roadmap.md  scope.md  sglang-lite-architecture-boundary.md  sglang-lite-grpc-spec.md  standalone-inference-service-roadmap.md  unigateway-sglang-lite-requirements.md  vllm-positioning-compatibility.md
docs/guide/: sglang-lite.md
engine/: __init__.py  core.py  kv_cache.py  loop.py  models.py  process.py  runner.py  sampling.py  scheduler.py  sglang_lite_pb2.py  sglang_lite_pb2_grpc.py
examples/: server.py  sglang_lite_server.py
proto/: sglang_lite.proto
python/sglang_lite/: __init__.py  config.py  server.py
python/sglang_lite/engine/: __init__.py  engine.py  kv_cache.py  runner.py  scheduler.py
scripts/: benchmark.py  demo.py
serving/: Cargo.toml  README.md
serving/src/: main.rs
src/: main.rs  openai.rs  protocol.rs  stub_engine.rs
tests/: conftest.py  test_batched_forward.py  test_cache_hit_correctness.py  test_dynamic_cache_compat.py  test_engine_loop_batch.py  test_gpu_optional.py  test_kv_prefix.py  test_reference_correctness.py
