[package]
name = "sglang-lite"
version = "0.1.0"
edition = "2021"
authors = ["sglang-lite contributors"]
description = "Minimal, high-cohesion LLM inference engine (Rust control plane + Python core)"
license = "Apache-2.0"
repository = "https://github.com/xinference/sglang-lite"
rust-version = "1.75"

[[bin]]
name = "sglang-lite"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio", "http1"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
thiserror = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-stream = "0.3"
once_cell = "1"

[dev-dependencies]
tokio-test = "0.4"

[workspace]
# Will become a workspace when we add more crates (e.g. protocol types)
members = ["."]
