[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-lite"
version = "0.2.0"
description = "sglang-lite Python execution core (pure library): Radix KV + MoE-aware continuous batching scheduler + model runner for popular MoE models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "torch>=2.3",
    "transformers>=4.40",
    "sentencepiece>=0.2",
    # gRPC support for unigateway integration (optional in practice, but included for completeness)
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    # prometheus-client is optional (peeled to serving layer)
]

[project.scripts]
sglang-lite-engine = "sglang_lite.process:main"

[project.optional-dependencies]
dev = ["ruff", "pytest"]
# For production paged attention with FlashInfer (CUDA only)
# pip install "sglang-lite[flashinfer]"
flashinfer = ["flashinfer>=0.1.0"]  # install via --extra-index-url https://flashinfer.ai/whl/cu121/torch2.4/ etc.

[tool.setuptools]
packages = ["sglang_lite"]
package-dir = { "sglang_lite" = "engine" }

[tool.ruff]
line-length = 100
target-version = "py310"
