[package]
name = "sglang-lite-control"
version = "0.2.1"
edition = "2021"
authors = ["sglang-lite contributors"]
description = "Minimal Rust control plane (OpenAI adapter + internal protocol) for sglang-lite"
license = "Apache-2.0"
rust-version = "1.75"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio", "http1"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-stream = "0.3"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
